add deployment scripts

--- a/_posts/2014-01-20-120.md
+++ b/_posts/2014-01-20-120.md
@@ -3,7 +3,7 @@ id: 120
 title: Building full stack JS apps
 date: 2014-01-20T18:29:55+00:00
 author: alaa
-layout: post
+layout: article
 guid: http://alaaattya.wordpress.com/?p=120
 permalink: /?p=120
 publicize_linkedin_url:
