--- a/_posts/2022-02-05-what-is-ci.md
+++ b/_posts/2022-02-05-what-is-ci.md
@@ -7,6 +7,8 @@ layout: article
 tags:
     - ci
     - software-engineering
+categories:
+  - software engineering    
 key: What-is-ci-133
 lang: ar
 ---
