Blogging about CI

--- a/_posts/2022-02-05-what-is-ci.md
+++ b/_posts/2022-02-05-what-is-ci.md
@@ -13,7 +13,7 @@ key: What-is-ci-133
 lang: ar
 ---
 
-معظم الناس دايما هتسمع الكلمتين دول ورا بعض. لدرجه ان ناس كتير ممكن تكون فاكره ان الاتنين حاجه واحده
+معظم الناس دايما هتسمع الكلمتين دول ورا بعض CI/CD. لدرجه ان ناس كتير ممكن تكون فاكره ان الاتنين حاجه واحده
 
   
 
